--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
+const mario = document.querySelector('.mario')
+const pipe = document.querySelector('.pipe')
 
+const start = document.querySelector('.start')
+const gameOver = document.querySelector('.game-over')
+
+audioStart = new Audio('./src/audio/audio_theme.mp3')
+audioGameOver = new Audio('./src/audio/audio_gameover.mp3')
+
+
+const startGame = () => {
+  pipe.classList.add('pipe-animation')
+  start.style.display = 'none'
+
+  // audio
+  audioStart.play()
+}
