--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,23 @@
     background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
+
+button {
+    background: green;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border: none;
+    padding: 1rem;
+    position: absolute;
+    right: 50vw;
+    top: 50vh;
+    cursor: pointer;
+    z-index: 1;
+}
+
+button:hover {
+    border: 2px solid green;
+    background: none;
+    color: green;
+}
