--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,16 @@ button:hover {
     text-align: center;
     margin-top: 15rem;
 }
+
+.pipe {
+    position: absolute;
+    bottom: 0;
+    right: -80px;
+    width: 80px;
+}
+
+.mario{
+    width: 150px;
+    position: absolute;
+    bottom: 0;
+}
