--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,19 @@ button:hover {
     position: absolute;
     bottom: 0;
 }
+
+.clouds {
+    width: 550px;
+    position: absolute;
+    top: 0;
+    animation: clouds-animation 20s infinite linear;
+}
+
+@keyframes clouds-animation {
+    from {
+        right: -550px;
+    }
+    to {
+        right: 100%;
+    }
+}
